change panel filters display

--- a/app/assets/stylesheets/dimensions.css.scss
+++ b/app/assets/stylesheets/dimensions.css.scss
@@ -217,6 +217,13 @@
     .divider{
       line-height: 24px;
     }
+    .filter{
+      cursor: pointer;
+      line-height: 24px;
+    }
+    .filter-path-splitter{
+      line-height: 24px;
+    }
     .dimension-tag{
       cursor: pointer;
     }
