--- a/app/assets/stylesheets/reports.css.scss
+++ b/app/assets/stylesheets/reports.css.scss
@@ -16,7 +16,7 @@
   .control-panels-container{
     margin: 3px 0 3px 0;
     width: 100%;
-    td.filters{
+    td.tags{
       padding-left: 5px;
       span.sign{
         float: left;
