--- a/app/views/layouts/template.haml
+++ b/app/views/layouts/template.haml
@@ -8,10 +8,10 @@
     = favicon_link_tag '/favicon.png', :type => 'image/png'
     / Le HTML5 shim, for IE6-8 support of HTML elements
     /[if lt IE 9]
-      = javascript_include_tag "http://html5shim.googlecode.com/svn/trunk/html5.js"
+      = javascript_include_tag "//html5shim.googlecode.com/svn/trunk/html5.js"
     / Le styles
-    = javascript_include_tag "http://lib.sinaapp.com/js/jquery/1.7.2/jquery.min.js"
-    = javascript_include_tag "http://lib.sinaapp.com/js/jquery-ui/1.8.11/jquery-ui.min.js"
+    = javascript_include_tag "//ajax.aspnetcdn.com/ajax/jquery/jquery-1.9.0.min.js"
+    = javascript_include_tag "//ajax.aspnetcdn.com/ajax/jquery.ui/1.10.0/jquery-ui.min.js"
     = javascript_include_tag "application"
     = stylesheet_link_tag    "application"
 
@@ -23,4 +23,4 @@
     = yield
 
     #loading-message{:style => "display: none"} 载入中...
-    = javascript_include_tag "#{BasisService.base_url}/xingcloud.js?project_id=&select=analytic"
+    = javascript_include_tag "#{BasisService.base_url(request.scheme)}/xingcloud.js?project_id=&select=analytic"
