--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,6 +12,7 @@
  *= require bootstrap_and_overrides
  *= require datepicker
  *= require common
+ *= require chosen
  *= require projects
  *= require segments
  *= require reports
