--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -36,10 +36,9 @@
       = t("to")
       = MaintenancePlan.current_notice.first.end_at.strftime("%H:%M %D")
   %body
+    = render :partial => "layouts/header", :locals => { :project => @project }
     #container
       = yield
-    = javascript_include_tag "#{BasisService.base_url(request.scheme)}/xingcloud.js?project_id=#{@project.identifier unless @project.blank?}&select=analytic"
-
 
     :javascript
       var _gaq = _gaq || [];
