use new home page

--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -150,3 +150,40 @@ table.main-table{
   padding: 10px;
   border-top: 1px solid #CCC;
 }
+
+.home{
+  .load{
+    margin-top: 20px;
+  }
+  .projects{
+    margin-top: 20px;
+    .projects-column{
+      float: left;
+      list-style: none;
+      margin: 0;
+      .project{
+        margin: 0 7px 14px 7px;
+        a{
+          color: inherit;
+          text-decoration: none;
+          li{
+            list-style: none;
+            table{
+              width: 100%;
+            }
+          }
+        }
+      }
+      .project:hover{
+        border-width: 3px;
+      }
+    }
+  }
+}
+
+.admin{
+  margin-top: 20px;
+  .span4{
+    text-align: center;
+  }
+}
