--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -41,7 +41,7 @@
 
 :javascript
   Analytics.Request.get({
-    url: "/my_projects",
+    url: "/projects_summary",
     success: function (data, status, jqXHR){
       $('.project_select').html('');
       contains = false;
