fix bug no id for compare dimension

--- a/app/views/template/projects/index.haml
+++ b/app/views/template/projects/index.haml
@@ -6,7 +6,7 @@
           = t("menu")
         %url.nav.nav-list
           %li
-            %a{:href => template_reports_path()}
+            %a{:href => template_projects_path()}
               %i.icon-home
               = t("projects")
           %li
