--- a/app/views/projects/index.haml
+++ b/app/views/projects/index.haml
@@ -11,6 +11,7 @@
             <<
         .span4
 :javascript
+  I18n.fallbacks = true;
   I18n.defaultlocale = "en";
   I18n.locale = "#{I18n.locale}";
   projects = new Analytics.Collections.Projects();
