--- a/app/views/projects/index.haml
+++ b/app/views/projects/index.haml
@@ -14,6 +14,8 @@
   I18n.fallbacks = true;
   I18n.defaultlocale = "en";
   I18n.locale = "#{I18n.locale}";
+  window.XAUSER = "#{session[:cas_user]}";
+  window.XA.init({app: "xaa", uid: XAUSER});
   projects = new Analytics.Collections.Projects();
 
 = subscribe_to "/maintenance_plan"
