--- a/app/views/projects/show.haml
+++ b/app/views/projects/show.haml
@@ -1,3 +1,6 @@
+- content_for :title do
+  = @project.name
+
 - if @user
   :javascript
     Instances.Models.user = new Analytics.Models.User(#{@user.js_attributes.to_json});
