--- a/app/assets/stylesheets/dimensions.css.scss
+++ b/app/assets/stylesheets/dimensions.css.scss
@@ -222,8 +222,12 @@
       line-height: 24px;
     }
     .filter{
-      cursor: pointer;
-      line-height: 24px;
+      //cursor: pointer;
+      //line-height: 24px;
+
+    }
+    a.filter:hover{
+      text-decoration: none;
     }
     .filter-path-splitter{
       line-height: 24px;
@@ -243,6 +247,9 @@
   .dropdown{
     .dropdown-toggle{
       display:inline;
+    }
+    div.dimension-tag{
+      display: inline-block;
     }
     .dropdown-menu{
       width:220px;
