--- a/app/assets/stylesheets/reports.css.scss
+++ b/app/assets/stylesheets/reports.css.scss
@@ -4,6 +4,8 @@
 
 .report-panel{
   z-index: 1001;
+  min-width: 1024px;
+  width:100%;//todo wcl
 /*  border: 1px solid grey;
   border-radius: 10px;
   -moz-border-radius: 10px;
