add sql support to segment

--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -70,6 +70,9 @@
     .dropdown{
       display: inline-block;
       float: none;
+      a{
+        margin-right: 0px;
+      }
     }
   }
   .navbar-inner{
