--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -21,6 +21,7 @@
       %div.dropdown.project-select
 
 .report-panel{:id=>"report-panel"}
+.report-panel-shadow
 
 :javascript
   I18n.fallbacks = true;
