fix bug: change compare chart while changing orderby for dimension

--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -1,8 +1,8 @@
 .header{
   background-color: rgb(250,249,245);
   .hl{
-    width: 200px;
     height:45px;
+    max-width: 300px;
     div.project-select{
       cursor: pointer;
       font-weight: bold;
