--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,12 +1,19 @@
-<h2>Forgot your password?</h2>
+<div class="sign">
+    <h3>Forgot  password?</h3>
 
-<%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
-  <%= devise_error_messages! %>
+    <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
+      <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
+      <div><%= f.email_field :email, :autofocus => true, :placeholder=>"email" %></div>
 
-  <div><%= f.submit "Send me reset password instructions" %></div>
-<% end %>
+      <div><%= f.submit "Send me reset password instructions" %></div>
+    <% end %>
 
-<%= render "devise/shared/links" %>
+  <%- if controller_name != 'sessions' %>
+      <%= link_to "Sign in", new_session_path(resource_name), :class => "left" %>
+  <% end -%>
+
+  <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
+      <%= link_to "Sign up", new_registration_path(resource_name), :class => "right" %>
+  <% end -%>
+</div>
