--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,6 +5,8 @@
     <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
       <%= devise_error_messages! %>
 
+      <div> <%= f.text_field :name, :autofocus => true, :placeholder=>"username" %> </div>
+
       <div> <%= f.email_field :email, :autofocus => true, :placeholder=>"email" %> </div>
 
       <div><%= f.password_field :password, :placeholder=>"password" %></div>
