bug fix && new feature on user system

--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -20,6 +20,9 @@
           %li
             %a{:href => "http://p.xingcloud.com:3001/logout", :ref => "nofollow"}
               = t(:header_logout)
+          %li
+            %a{:href => "/account"}
+              = t(:account_settings)
 
     %div.hl
       %div.dropdown.project-select
