--- a/app/views/account/index.haml
+++ b/app/views/account/index.haml
@@ -1,6 +1,6 @@
 
 
 :javascript
+  Instances.Models.user = new Analytics.Models.User(#{@user.js_attributes.to_json});
+  Instances.Collections.UserProjects = new Analytics.Collections.UserProjects();
   new Analytics.Views.Projects.HeaderView({project: null}).render();
-  Instances.Collections.UserProjects = new Analytics.Collections.ProjectUsers(#{@user_projects.map(&:js_attributes)},{project:null})
-  new Analytics.Views.Account.IndexView().render();
