.find(.modal).modal(hide)

--- a/app/views/account/index.haml
+++ b/app/views/account/index.haml
@@ -1,6 +1,6 @@
 
 
 :javascript
-  Instances.Models.user = new Analytics.Models.User(#{@user.js_attributes.to_json});
+  Instances.Models.user = new Analytics.Models.User(#{@login_user.js_attributes.to_json});
   Instances.Collections.UserProjects = new Analytics.Collections.UserProjects();
   new Analytics.Views.Projects.HeaderView({project: null}).render();
