user/project system:beta

--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -232,3 +232,12 @@ table{
 a.xa-log-url{
     border:1px dashed black;
 }
+
+.message{
+  margin-bottom: 0px !important;
+  text-align: center;
+  position: fixed;
+  left: 0;
+  right: 0;
+  z-index: 1000;
+}
