--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -8,7 +8,7 @@
       %div.dropdown.pull-right
         %a.dropdown-toggle{:href => "#", "data-toggle" => "dropdown"}
           = session[:cas_user]
-          %b.caret
+          %b.caret                                  f
         %ul.dropdown-menu
           - if project.present?
             %li
