add user management system

--- a/app/views/layouts/manage.haml
+++ b/app/views/layouts/manage.haml
@@ -16,8 +16,8 @@
     = javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"
     = javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/backbone.js/1.0.0/backbone-min.js"
     = javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/moment.js/2.0.0/moment.min.js"
-    = javascript_include_tag "account"
-    = stylesheet_link_tag    "account"
+    = javascript_include_tag "manage"
+    = stylesheet_link_tag    "manage"
 
   %body
     #container
