bug fix & new features

--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -120,7 +120,7 @@
     }
 
     td.metric-name{
-      border-bottom: 0;
+      //border-bottom: 0;
       position: relative;
       cursor: default;
       span{
